--- a/ListAplication/app/src/main/res/layout/fragment_lista.xml
+++ b/ListAplication/app/src/main/res/layout/fragment_lista.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.a71.listaplication.fragments.ListaFragment">
 <ListView
     android:layout_width="match_parent"
@@ -9,5 +10,12 @@
     android:id="@+id/lista">
 
 </ListView>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </FrameLayout>
