--- a/RecyclerListApp/app/src/main/res/layout/customrecycler.xml
+++ b/RecyclerListApp/app/src/main/res/layout/customrecycler.xml
@@ -17,11 +17,13 @@
             android:src="@mipmap/ic_launcher"
             app:civ_border_width="2dp"
             app:civ_border_color="#1c450b"/>
+
         <TextView
             android:layout_width="match_parent"
             android:gravity="center"
+            android:id="@+id/text_desc"
             android:layout_height="wrap_content"
-            android:text="Description"/>
+            android:text="@string/description"/>
 
     </LinearLayout>
 
