--- a/RecyclerListApp/app/src/main/res/layout/content_main.xml
+++ b/RecyclerListApp/app/src/main/res/layout/content_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
+    android:background="#e9e0e0"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.a71.recyclerlistapp.MainActivity"
     tools:showIn="@layout/activity_main">
