--- a/RecyclerListApp/app/src/main/res/layout/customrecycler.xml
+++ b/RecyclerListApp/app/src/main/res/layout/customrecycler.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardElevation="5dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    app:cardCornerRadius="5dp"
+    app:cardBackgroundColor="@android:color/white">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
@@ -12,8 +20,9 @@
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="5dp"
             android:src="@mipmap/ic_launcher"
             app:civ_border_width="2dp"
             app:civ_border_color="#1c450b"/>
