--- a/DesingApplication/app/src/main/res/layout/content_main.xml
+++ b/DesingApplication/app/src/main/res/layout/content_main.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:padding="15dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.a71.desingapplication.MainActivity"
     tools:showIn="@layout/app_bar_main">
@@ -16,5 +19,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/account_multiple_plus"
+        tools:ignore="MissingPrefix" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button"
+        style="@style/AccentButton"
+        android:text="Button" />
+
+</LinearLayout>
