--- a/DesingApplication/app/src/main/res/values/styles.xml
+++ b/DesingApplication/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/colorAccent</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -17,4 +18,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AccentButton" parent="android:Widget">
+    <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">20sp</item>
+        <item name="android:textSize">@android:color/white</item>
+        <item name="android:textColor">true</item>
+        <item name="backgroundTin">@color/colorPrimary</item>
+    </style>
 </resources>
